# upserver

./: .env.example  .gitignore  Makefile  README.DEV.md  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
alerts/: Dockerfile  app.py  conftest.py  cron.py  messager.py  pytest.ini  requirements.txt  run.py  settings.py
alerts/tests/: tests.py
interface/: Dockerfile  __upserver__.py  asgi.py  conftest.py  crontab  db_tasks.py  docker-entrypoint.sh  fill_database.py  initial_database.py  initial_database.sh  logger.py  pytest.ini  requirements.txt  run.py  settings.py  start.sh  urls.py  wsgi.py
interface/env_secrets/: apps.py
interface/integrations/: admin.py  apps.py  models.py  tasks.py
interface/integrations/migrations/: 0001_initial.py  0002_alter_clickhouselogger_request_extra.py  0003_alter_clickhousecaptureexception_options_and_more.py
interface/log_collector/: admin.py  apps.py  models.py  schema.py  tasks.py  utils.py
interface/log_collector/migrations/: 0001_initial.py  0002_collectorexception_fn_data.py  (+9 more)
interface/monitoring/: admin.py  apps.py  models.py  signals.py
interface/tests/: tests.py
log_collectors/: README.md  __upserver__.py
log_collectors/any_logger/: README.md  __init__.py  src.py
log_collectors/django_logger/: README.md  __init__.py  __upserver__.py  src.py
log_collectors/nginx_logger/: README.md  __init__.py  app.py  requirements.txt  src.py
monitoring/: Dockerfile
source/: Cargo.toml  Dockerfile
source/src/: main.rs
(+6 files in other folders)
