[package]
name = "monitoring"
version = "0.1.4"
authors = ["root <mail.asobolev@yandex.ru>"]
edition = "2018"

[dependencies]
postgres = "0.19.4"
anyhow = { version = "1.0", default-features = false }
reqwest = { version = "0.10.7", features = ["blocking"] }
ssh2 = "0.9.3"
chrono = "0.4"
daemonize = "0.4.1"
oping = "0.3.1"
